# Autocalibration_IsolatedTesting

./: CMakeLists.txt  README.md  libmv.cpp  libmv.hpp  main.cpp  testing_functions.cpp  testing_functions.hpp  utils_for_testing.cpp  utils_for_testing.hpp
python/: print_graphs.ipynb  utils.py
python_plots/: print_graphs.ipynb  utils.py
results/: Effect_of_translation_range_10Cams_50Reconstr_30FocalLength_2004paper.txt  Effect_of_translation_range_10Cams_50Reconstr_40FocalLength_2004paper.txt  Effect_of_translation_range_50Cams_50Reconstr_30FocalLength_2004paper.txt  Effect_of_translation_range_50Cams_50Reconstr_40FocalLength_2004paper.txt  Effect_of_translation_range_varying_10Cams_500Reconstr_CamDistLogN(3.7,0.6).txt  Effect_of_translation_range_varying_10Cams_50Reconstr_CamDistLogN(3.7,0.6).txt  Effect_of_translation_range_varying_50Cams_500Reconstr_CamDistLogN(3.7,0.6).txt  Effect_of_translation_range_varying_50Cams_50Reconstr_CamDistLogN(3.7,0.6).txt  QRvsIAC_10Cams_100Reconstr_10000Transl.txt  QRvsIAC_10Cams_100Reconstr_10000Transl_1997paper.txt  QRvsIAC_10Cams_100Reconstr_1000Transl.txt  QRvsIAC_10Cams_100Reconstr_1000Transl_1997paper.txt  QRvsIAC_10Cams_100Reconstr_100Transl.txt  QRvsIAC_10Cams_100Reconstr_100Transl_1997paper.txt  QRvsIAC_10Cams_100Reconstr_10Transl.txt  QRvsIAC_10Cams_100Reconstr_10Transl_1997paper.txt  QRvsIAC_10Cams_100Reconstr_1Transl.txt  QRvsIAC_10Cams_100Reconstr_1Transl_1997paper.txt  QRvsIAC_10Cams_1Reconstr_10000Transl.txt  QRvsIAC_10Cams_1Reconstr_1000Transl.txt  QRvsIAC_10Cams_1Reconstr_100Transl.txt  QRvsIAC_10Cams_1Reconstr_10Transl.txt  QRvsIAC_10Cams_1Reconstr_1Transl.txt  QRvsIAC_50Cams_100Reconstr_10000Transl.txt  QRvsIAC_50Cams_100Reconstr_1000Transl.txt  (+33 more)
tests/: CMakeLists.txt  test_autocalibration.cpp
(+4 files in other folders)
